internal/queryfile/testdata/invalid/missing_annotation.cypher
// name: EmptyBody :one
// name: NextQuery :many
MATCH (p:Person) RETURN p
